# soil-hydraulics

./: .pre-commit-config.yaml  Cargo.toml  README.md  README.tpl  justfile
.github/workflows/: coverage.yml  rust.yml
src/: default_models.rs  errors.rs  lib.rs  model.rs  traits.rs  util.rs
src/models/: mod.rs  mvg.rs  vg.rs  vgm.rs
