[package]
name = "van-genuchten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.17", features = ["libm"] }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[features]
std = ["num-traits/std"]