[package]
name = "soil-hydraulics"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = { version = "0.2.17", default-features = false }
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }

[features]
default = ["libm"]
libm = ["num-traits/libm"]
std_math = ["num-traits/std"]
std_errors = ["thiserror/std"]
std = ["std_math", "std_errors"]

